--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+*{
+	background-color : rgb(204,204,204);
+}
+	
+div,ul,li,nav{
+		background-color : rgb(255,255,255);
+	    padding : 10px ;
+        border-radius : 10px;
+	    list-style-type : none;
+	   
+	}
