--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ div,ul,li,nav{
 	text-decoration-line : none;
 	    list-style-type : none;	   
 	}
-	..player_one/.player_two{
+	.player_one,.player_two{
 		background-color : rgb(255,255,255);
 		 padding : 10px ;
         border-radius : 10px;
